service.yml
apiVersion: v1
kind: Service
metadata:
  name: refokus-webapp-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
  selector:
    app: refokus-webapp
